Added routes: Warning: This changes causes problems in clients of this api.
- /user/id/userID ---> get a user by ID
- /user/wallet ---> get a walletID in the req.body and find the owner
- /users/username/:startwith ---> search a bunch of users with username like startwith
- /user/username/:username ---> get a single user that match strict the username
- /users --> get all users

Update information on swagger :D
